--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.3.0
   shared_preferences: ^2.4.0
   lucide_icons: ^0.257.0
+  hugeicons: ^0.0.7
+  icons_plus: ^5.0.0
 
 dev_dependencies:
   flutter_test:
